@@ -27,6 +27,7 @@ static void foo ()
 {
 #ifndef __SDCC_gbz80
 #ifndef __SDCC_mcs51
+#ifndef __SDCC_stm8
     char a[ARRAY_SIZE]; /* Too big for mcs51 and gbz80. */
 
     a[0]=0;
@@ -36,6 +37,7 @@ static void foo ()
       ASSERT (0);
 #endif
 #endif
+#endif
 }
 
 void
@@ -43,8 +45,10 @@ testTortureExecute (void)
 {
 #ifndef __SDCC_gbz80
 #ifndef __SDCC_mcs51
+#ifndef __SDCC_stm8
     foo();
     return;
+#endif
 #endif
 #endif
 }
