@@ -8,7 +8,7 @@
 #pragma std_c99
 #endif
 
-#ifndef __SDCC_mcs51
+#if !defined(__SDCC_mcs51) && !defined (__SDCC_stm8)
 #include <string.h>
 
 void foo (int *BM_tab, int j)
@@ -30,7 +30,7 @@ void foo (int *BM_tab, int j)
 void
 testTortureExecute (void)
 {
-#ifndef __SDCC_mcs51
+#if !defined(__SDCC_mcs51) && !defined (__SDCC_stm8)
   int BM_tab[0400];
   memset (BM_tab, 0, sizeof (BM_tab));
   foo (BM_tab, 6);
